Change the semantics of the .autoreg file so that it can be used for Firefox and Thunderbird to trigger re-registration in all profiles.  Rather than checking for the existance of the file, registering, and deleting it, we'll always compare the timestamp of .autoreg to that of the profile compreg.dat, and re-register if .autoreg exists and is newer.  Bug 252905, r=darin.